[package]
name = "tiktok-downloader"
version = "0.1.0"
edition = "2021"
authors = ["protosskai"]
about = "A simple tiktok downloader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
clap = { version = "4.3.3", features = ["derive"] }
futures-util = "0.3.28"
http = "0.2.9"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
scraper = "0.16.0"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
url = "2.4.0"

[[bin]]
name = "tiktok"
